sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:9: error: ';' expected but ',' found.
      {echange(j,j-1), j-=1}}
                     ^DutchFlagAlgo:11: error: ';' expected but ',' found.
      {echange(j,j-1), j-=1}}}
                     ^